# post-covid-datenmodell

./: .all-contributorsrc  .gitignore  LICENSE  README.md  pyproject.toml  sandbox.ipynb
data/raw/: 2024-11-13_federal_state_mapper.xlsx  2024-11-14_plz_geocoord.csv  2024-12-02_post_covid_reha.json  2024-12-03_berlin_plz_mapping.csv  2024_11_26_abwasser_standorte.csv
files/abwasserdaten/: nfdi4health.json
metadata/dcat/: airquality.jsonld  bar_postcovid_reha.jsonld  bmg_postcovid_ambulanzen.jsonld  dwd_wetter.jsonld  gesis_allbus.jsonld  luftqualitaet.jsonld  reha_kliniken.jsonld  rki_abwasser_viruslast.jsonld  rki_covid_cases.jsonld  rki_covid_faelle.jsonld  wastewater.jsonld  weather.jsonld
metadata/frictionless/: bar_postcovid_reha_datapackage.json  bmg_postcovid_ambulanzen_datapackage.json  luftqualitaet-datapackage.json  rki_abwasser_viruslast_datapackage.json  rki_covid_faelle_datapackage.json  wetter-datapackage.json
mii-testdaten/: Bundle1.json
notebooks/: README.md  patient_abwasserdaten.ipynb  patient_clinics.ipynb  patient_covid_cases.ipynb  patient_luftdaten.ipynb  patient_rehadaten.ipynb  patient_rehas.ipynb  patient_wetterdaten.ipynb
src/download/: abwasser_downloader.py  airdata_downloader.py  clinic_downloader.py  covid_downloader.py  luftdata_downloader.py  patient.py  patients.py  rehabilitation_downloader.py  weatherdata_downloader.py
src/geolocation/: address_transformation.py
src/use_cases/: README.md  patient_abwasserdaten.ipynb  patient_clinics.ipynb  patient_covid_cases.ipynb  patient_luftdaten.ipynb  patient_rehas.ipynb  (+1 more)
(+7 files in other folders)
