[tool.poetry]
name = "post-covid-metadatenkatalog"
version = "0.1.0"
description = ""
authors = ["bauerfriederike <141726622+bauerfriederike@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
ipykernel = "^6.29.5"
haversine = "^2.8.1"
seaborn = "^0.13.2"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
